[package]
name = "vanhouzen-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-htmx = "0.6.0"
dotenvy = "0.15.7"
rinja = "0.3.0"
rinja_axum = "0.3.0"
tokio = { version = "1.39.2", features = ["full"] }
tower-livereload = "0.9.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
